samples/_failures_safe/1761293913_f7752b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b31520c3.c: In function ‘main’:
./samples/SAFE/__tmp_b31520c3.c:161:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  161 |     for (int i
      |     ^~~
./samples/SAFE/__tmp_b31520c3.c:161:5: error: expected declaration or statement at end of input
